# WeeklyPulse

./: .env.example  .gitignore  ProblemStatement.md  README.md  pyproject.toml  railway.json  render.yaml  ~$P Integration - My file.docx  ~WRL0005.tmp
.cursor/rules/: weeklypulse.mdc
.github/workflows/: weekly-pulse.yml  weekly_pulse.yml
config/: README.md  default.yaml
data/: README.md  manifest.json
data/fixtures/: README.md  app_store_sample.csv  play_store_sample.csv
data/output/: README.md
data/processed/: README.md  ingestion_summary.json
data/raw/: README.md
data/runs/: README.md  smoke-mcp-notes.md
data/runs/example/: manifest.example.json  manifest.json
docs/: architecture.md  decision.md  mcp-setup.md  operator-export-guide.md  phase-wise-implementation-plan.md
docs/automation/: github-actions-setup.md
docs/deployment/: migration-railway-to-render.md  render-deployment.md
docs/phases/: README.md
docs/phases/phase-01-foundation/: README.md  eval.md
docs/phases/phase-02-ingestion/: README.md  eval.md
docs/phases/phase-03-analysis/: README.md  eval.md
docs/phases/phase-04-delivery-mcp/: README.md  eval.md  implementation-summary.md  mcp-tool-contracts.md  quick-start.md
prompts/: mcp-smoke-test.md  responsibilities.md  system.md  weekly-run.md
scripts/: phase1_smoke_google.py  run_phase1_eval_checks.py  run_phase4_test.py
src/weeklypulse/: __init__.py  __main__.py  cli.py  config.py  main_api.py
templates/: manifest.template.json
tests/: test_analysis.py  test_ingestion.py  test_mcp_server.py
(+29 files in other folders)
