[project]
name = "weeklypulse"
version = "0.1.0"
description = "Turn app store reviews into a weekly pulse via AI agent and MCP"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "pyyaml>=6.0",
  "langdetect>=1.0.9",
  "google-play-scraper>=1.2.7",
  "groq>=0.9.0",
  "mcp>=1.27.0",
  "google-auth>=2.0.0",
  "google-auth-oauthlib>=1.0.0",
  "google-auth-httplib2>=0.2.0",
  "google-api-python-client>=2.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.0",
]

[project.scripts]
weeklypulse = "weeklypulse.cli:main"

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
